--- a/integration-interface/.settings/org.eclipse.wst.common.component
+++ b/integration-interface/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources/i18n/zh_CN"/>
         <dependent-module archiveName="integration-application-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/integration-application/integration-application">
             <dependency-type>uses</dependency-type>
         </dependent-module>
